--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "strat": "node server.js"
+    "strat": "node server.js",
+    "build": "echo \"Building the project...\""
   },
   "keywords": [],
   "author": "",
