--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nightclub-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "strat": "node server.js",
@@ -13,9 +14,12 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
