--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "strat": "node server.js",
+    "start": "node server.js",
     "build": "echo \"Building the project...\""
   },
   "keywords": [],
