--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   }
